- fix(app): Fixing bugs related to kafka pod, restricting access to admin panel, changing token issuance format
